--- a/templates/.github/workflows/ci.yml
+++ b/templates/.github/workflows/ci.yml
@@ -14,8 +14,8 @@ env:
   # Environment variables shared across jobs and doesn't change per environment
   region: ${{ secrets.AWS_DEFAULT_REGION }}
   accountId: ${{ secrets.AWS_ACCOUNT_ID }}
-  repo: python-app
-  namespace: deployable0504
+  repo: ${{ github.repository }}
+  namespace: ${{ github.repository }}
   cluster-name: ${{ secrets.EKS_CLUSTER_NAME }}
 jobs:
   unit-test:
