--- a/{{cookiecutter.name}}/.github/actions/deploy/action.yml
+++ b/{{cookiecutter.name}}/.github/actions/deploy/action.yml
@@ -4,8 +4,11 @@ inputs:
   namespace:
     description: Kubernetes namespace to deploy
     required: true
-  repository-name:
+  ecr-repository-name:
     description: Name of ECR repository containing the image
+    required: true
+  app-name:
+    description: Name of the application
     required: true
   image-tag:
     description: image-tag to deploy
