--- a/{{cookiecutter.name}}/.github/workflows/ci.yml
+++ b/{{cookiecutter.name}}/.github/workflows/ci.yml
@@ -34,7 +34,8 @@ jobs:
         - uses: actions/checkout@v2
         - name: Set IMAGE_TAG as env
           run: |
-            IMAGE_TAG=$(git rev-parse --short=7 ${{ github.sha }})
+            APP_NAME=$(echo "${{ github.repository }}" | sed -e 's/.*\///g')
+            IMAGE_TAG=${APP_NAME}-$(git rev-parse --short=7 ${{ github.sha }})
             echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
         - if: env.AWS_ACCESS_KEY_ID == null
           run: |
@@ -68,6 +69,12 @@ jobs:
           run: |
             IMAGE_TAG=$(git rev-parse --short=7 ${{ github.sha }})
             echo "IMAGE_TAG=${IMAGE_TAG}" >> $GITHUB_ENV
+        - name: Set APP_NAME and NAMESPACE as env
+          run: |
+            NAMESPACE=$(echo "${{ github.repository }}" | sed -e 's/.*\///g')
+            echo "NAMESPACE=${NAMESPACE}" >> $GITHUB_ENV
+            APP_NAME=$(echo "${{ github.repository }}" | sed -e 's/.*\///g')
+            echo "APP_NAME=${APP_NAME}" >> $GITHUB_ENV
         - name: Install kubectl
           uses: azure/setup-kubectl@v1
         - name: Configure AWS credentials
@@ -85,14 +92,13 @@ jobs:
         - name: Check Namespace
           run: |
             DEPLOYMENT=${{ env.repo }}
-            NAMESPACE=$(echo "${{ github.repository }}"" | sed -e 's/.*\///g')
-            echo "namespace=${NAMESPACE}" >> $GITHUB_ENV
-            kubectl create namespace $NAMESPACE || echo "Namespace already exists"
+            kubectl create namespace ${{ env.NAMESPACE }} || echo "Namespace already exists"
         - name: Deploy image
           uses: ./.github/actions/deploy
           with:
-            namespace: ${{ env.namespace }}
-            repository-name: ${{ env.repo }}
+            namespace: ${{ env.NAMESPACE }}
+            ecr-repository-name: ${{ secrets.ECR_REPOSITORY }}
+            app-name: ${{ env.APP_NAME }}
             image-tag: ${{ env.IMAGE_TAG }}
             docker-host: ${{ env.accountId }}.dkr.ecr.${{ env.region }}.amazonaws.com
             region: ${{ env.region }}
