fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Initial commit

--- a/.github/workflows/setup-repository.yml
+++ b/.github/workflows/setup-repository.yml
@@ -2,7 +2,7 @@ name: Setup repository
 on:
   push:
     paths:
-      - cookiecutter.json
+      - zero-project.yml
 jobs:
   setup:
     name: Reinitialize repository
@@ -65,26 +65,26 @@ jobs:
         run: |
           find ./ -maxdepth 1 \
           ! -name '.git' \
-          ! -name 'cookiecutter-temp' \
+          ! -name 'output' \
           ! -name '.' \
           ! -exec rm -rf {} +
       - name: Move files to root
         shell: bash
-        # The cookiecutter-temp/ folder contains a single folder which is the
+        # The output/ folder contains a single folder which is the
         # generated project by cookiecutter. We want to move all the project
         # files into the root directory so we can reinitialize git in the next step
         run: |
-          rsync -r ./cookiecutter-temp/*/ . && \
-          rm -rf ./cookiecutter-temp/
-      # - name: Reinitialize git repository
-      #   shell: bash
-      #   # Reinitialize git after scaffolding this repository.
-      #   # We use `git checkout --orphan` to create a branch in a git init-like state.
-      #   # By force pushing this as `main` we end up with a new clean git history.
-      #   run: |
-      #     git config --global user.email "github-actions[bot]@users.noreply.github.com" && \
-      #     git config --global user.name "github-actions[bot]" && \
-      #     git checkout --orphan temp-branch && \
-      #     git add . && \
-      #     git commit -m 'Initial commit' && \
-      #     git push origin temp-branch:master -f
+          rsync -r ./output/*/ . && \
+          rm -rf ./output/
+      - name: Reinitialize git repository
+        shell: bash
+        # Reinitialize git after scaffolding this repository.
+        # We use `git checkout --orphan` to create a branch in a git init-like state.
+        # By force pushing this as `main` we end up with a new clean git history.
+        run: |
+          git config --global user.email "github-actions[bot]@users.noreply.github.com" && \
+          git config --global user.name "github-actions[bot]" && \
+          git checkout --orphan temp-branch && \
+          git add . && \
+          git commit -m 'Initial commit' && \
+          git push origin temp-branch:master -f
