--- a/templates/kubernetes/deploy/ingress.yml
+++ b/templates/kubernetes/deploy/ingress.yml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ cookiecutter.name }}
+  name: <% .Name %>
   annotations:
     # nginx ingress
     kubernetes.io/ingress.class: nginx
@@ -11,11 +11,11 @@ metadata:
     cert-manager.io/cluster-issuer: clusterissuer-letsencrypt-production
     # CORS
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://{{ cookiecutter.name }}.zero-david.online"
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://<% .Name %>.<% index .Params `domain` %>"
 
 spec:
   rules:
-  - host: {{ cookiecutter.name }}.zero-david.online
+  - host: <% .Name %>.<% index .Params `domain` %>
     http:
       paths:
         - path: /(.*)
@@ -24,5 +24,5 @@ spec:
             servicePort: http
   tls:
   - hosts:
-    - {{ cookiecutter.name }}.zero-david.online
-    secretName: {{ cookiecutter.name }}-tls-secret
+    - <% .Name %>.<% index .Params `domain` %>
+    secretName: <% .Name %>-tls-secret
