--- a/templates/kubernetes/deploy/kustomization.yml
+++ b/templates/kubernetes/deploy/kustomization.yml
@@ -7,7 +7,7 @@ resources:
 - ingress.yml
 
 configMapGenerator:
-- name: {{ cookiecutter.name }}-config
+- name: <% .Name %>-config
   literals:
     - DATABASE_ENGINE=postgres
     - DATABASE_HOST=
@@ -16,4 +16,4 @@ configMapGenerator:
     - SERVICE_PORT=80
 
 commonLabels:
-  app: {{ cookiecutter.name }}
+  app: <% .Name %>
