--- a/zero-project.yml
+++ b/zero-project.yml
@@ -1,5 +1,7 @@
-
-name: # Fill in name
+# ------------------------
+# Fill in name of your App
+# this becomes the deployment and namespace name
+name:
 
 shouldPushRepositories: false
 
@@ -9,4 +11,11 @@ modules:
       dir: output
       source: .
     parameters:
+      # ------------------------
+      # DO NOT CHANGE
+      # should be fixed based on the AWS account youre using
+      ecrRepo: python-app
       domain: zero-david.online
+      # ------------------------
+      # App settings
+      containerPort: 80
