fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! fixup! Initial commit

--- a/.github/workflows/setup-repository.yml
+++ b/.github/workflows/setup-repository.yml
@@ -1,5 +1,6 @@
 name: Setup repository
 on:
+  # Upon zero-project.yml is edited it will template out and rewrite the git history of the repo
   push:
     paths:
       - zero-project.yml
