--- a/templates/kubernetes/deploy/ingress.yml
+++ b/templates/kubernetes/deploy/ingress.yml
@@ -24,5 +24,5 @@ spec:
             servicePort: http
   tls:
   - hosts:
-    - <% .Name %>.<% index .Params `domain` %>
+    - <% .Name %>-api.<% index .Params `domain` %>
     secretName: <% .Name %>-tls-secret
