--- a/zero-project.yml
+++ b/zero-project.yml
@@ -14,8 +14,8 @@ modules:
       # ------------------------
       # DO NOT CHANGE
       # should be fixed based on the AWS account youre using
-      ecrRepo: python-app
-      domain: zero-david.online
+      ecrRepo: onboarding
+      domain: onboarding.dev
       # ------------------------
       # App settings
       containerPort: 80
