--- a/.github/workflows/setup-repository.yml
+++ b/.github/workflows/setup-repository.yml
@@ -35,9 +35,9 @@ jobs:
           # Checkout my blog post https://stefanbuck.com/blog for alternative options
           token: ${{ secrets.REPO_SETUP_TOKEN || secrets.GITHUB_TOKEN }}
 
-      - name: Check name is valid
+      - name: Check name is valid [lowercase alpha-numeric and dashes]
         run: |
-          cat zero-project.yml | grep -Eo "^name:(\s|\t)+(\w|\d|-)+"
+          cat zero-project.yml | grep -Eo "^name:(\s|\t)+([a-z]|\d|-)+$"
       - uses: actions/setup-python@v2
         with:
           python-version: '3.x'
